--- a/styles/style.css
+++ b/styles/style.css
@@ -13,6 +13,10 @@
   height: 100vh;
   min-height: 600px;
   max-height: 756px;
+  position: relative;
+  display:flex;
+  background-color:#f2f2f2;
+  z-index: -1;
   /* выше установили ограничения для секции */
 }
 
@@ -20,12 +24,358 @@
 .header__square-pic {
   height: 568px;
   width: 568px;
+  background-color:#2f80ed;
+  position: absolute;
+  right: 0px;
+  top: 64px;
+  z-index: 0;
 }
 
-/* и элемента с модификатором вида ключ-значение */
+.header__main-illustration{
+  position: absolute;
+  bottom: 0px;
+  right: 0px;
+  height: 608px;
+  width: 765px;
+  z-index: 1;
+}
+
+.header_logo{
+  background-image: url("../images/logo_place_header.svg");
+}
+
+.logo_place_header{
+  position: absolute;
+  top: 30px;
+  left: 64px;
+  height: 32px;
+  width: 183px;
+}
+
+.header__title{
+  display:flex;
+  align-items: center;
+  justify-content: center;
+  margin-left: 64px;
+  width: 730px;
+  font-size: 102px;
+  line-height: 96px;
+  font-weight: bold;
+}
+
+.header__subtitle{
+  position: absolute;
+  left: 64px;
+  bottom: 30px;
+  font-size: 18px;
+  font-weight: normal;
+  line-height: 25px;
+  width: 388px;
+}
+
+.header__link{
+  font-weight: normal;
+  color:#2f80ed;
+}
+
+/* Секция description */
+
+.two-columns {
+  width: 80%;
+  margin: auto;
+  margin-top: 100px;
+  margin-bottom: 100px;
+  display: flex;
+  justify-content: space-between;
+}
+
+.two-columns__main-text{
+  min-width: 784px;
+  width: 80%
+}
+
+.two-columns__brief{
+  line-height: 1.2;
+  font-size: 18px;
+  font-weight: normal;
+  width: 175px;
+  margin-top: 0;
+  margin-bottom: 0;
+  color:#2f80ed;
+}
+
+.two-columns__paragraph{
+  line-height: 34px;
+  font-size: 24px;
+  font-weight: normal;
+}
+
+.two-columns__paragraph_margin{
+  margin-top: 30px;
+  margin-bottom: 30px;
+}
+
+.two-columns__span-accent{
+  line-height: 34px;
+  font-size: 24px;
+  font-weight: bolder;
+}
+
+/* Секция digits */
+
+.section-title{
+  margin:auto;
+  display:flex;
+  justify-content: center;
+  width: 60%;
+  line-height:1.15;
+  font-size: 60px;
+  font-weight: bold;
+}
+
+.section-title__header{
+  margin:0;
+}
+
+.section-subtitle{
+  line-height: 34px;
+  font-size: 24px;
+  font-weight: normal;
+  margin:0 auto;
+  margin-top: 20px;
+  display:flex;
+  justify-content: center;
+  width: 60%;
+}
+
+.table{
+  margin: auto;
+  margin-bottom: 100px;
+  width: 1100px;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+}
+
+.table__cell{
+  width: 250px;
+  margin-top: 60px;
+}
+
+.table__heading{
+  margin: 0;
+  line-height: 1.15;
+  font-size: 24px;
+  font-weight: bold;
+}
+.table__text{
+  margin:20px 0 0;
+  line-height: 1.2;
+  font-size: 18px;
+  font-weight: normal;
+}
+
+.table__text_source{
+  margin-top: 20px;
+  line-height: 1.2;
+  font-size: 18px;
+  font-weight: normal;
+}
+
+
+/* Секция feiman */
+
+.feinman{
+  height: 790px;
+  padding-top:100px;
+  position: relative;
+}
+
+.feiman__title{
+  margin:auto;
+  display:flex;
+  text-align: center;
+  width: 648px;
+  line-height: 1.15;
+  font-size: 120px;
+  font-weight: bold;
+}
+
+.feiman__subtitle{
+  margin: 70px auto auto;
+  display:flex;
+  justify-content: center;
+  line-height: 51px;
+  font-size: 36px;
+  font-weight: normal;
+}
+
+.feiman__link{
+  position: absolute;
+  top: 50%;
+  right: 48px;
+  line-height: 51px;
+  font-size: 36px;
+  font-weight: normal;
+}
+
+.feiman__image{
+  width: 867px;
+  height: 647px;
+  position: absolute;
+  left: 0;
+  bottom: 0;
+  z-index: -1;
+}
+
+
+/* Секция kaufman */
+
+.kaufman{
+  background-color: #1f1f1f;
+  overflow:hidden;
+  position: relative;
+  z-index: -2;
+}
+
+.section-title_theme_dark{
+  margin:auto;
+  padding-top:90px;
+  display:flex;
+  justify-content: center;
+  width: 60%;
+  line-height:69px;
+  font-size: 60px;
+  font-weight: bold;
+  color:white;
+}
+
+.section-subtitle_theme_dark{
+  line-height: 34px;
+  font-size: 24px;
+  font-weight: normal;
+  margin:0 auto;
+  margin-top: 20px;
+  display:flex;
+  justify-content: center;
+  width: 60%;
+  color:white;
+}
+
+
 .table__cell_theme_dark {
   width: 200px;
-  color: white;
+  color:white;
   margin-right: 0;
   margin-top: 80px;
+}
+
+.table_theme_dark{
+  padding-bottom: 90px;
+}
+
+.table__heading_theme_dark{
+  line-height:1.15;
+  font-size: 23px;
+  font-weight: bold;
+}
+
+.table__text_theme_dark{
+  line-height:1.2;
+  font-size: 18px;
+  font-weight: normal;
+}
+
+.kaufman__triangle{
+  position:absolute;
+  right: -210px;
+  top:0px;
+  width: 877px;
+  height: 877px;
+  z-index: -1;
+}
+
+/* секция footer */
+
+.footer{
+  background-color: #1f1f1f;
+}
+
+.footer__columns{
+  padding-bottom: 40px;
+  padding-top: 60px;
+  margin:auto;
+  width: 90%;
+  display:flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  min-height: 350px;
+}
+
+.footer__column_content_copyright{
+  display: flex;
+  flex-basis:711px;
+  flex-direction: column-reverse;
+  justify-content: space-between;
+}
+
+.logo_place_footer{
+  background-image: url(../images/logo_place_footer.svg);
+  width: 183px;
+  height: 35px;
+}
+
+.footer__author{
+  margin-bottom: 18px;
+  margin-top: 18px;
+  line-height:25px;
+  font-size: 18px;
+  font-weight: normal;
+  color:white;
+}
+
+.footer__column_content_info{
+}
+
+.footer__column-links{
+  list-style-type: none;
+  padding-left: 0;
+  color:white;
+}
+
+.footer__column-heading{
+  margin-bottom: 20px;
+  line-height:30px;
+  font-size: 18px;
+  font-weight: bold;
+  color:white;
+}
+
+.footer__column-links_main-info{
+  line-height:30px;
+  font-size: 18px;
+  font-weight: normal;
+  color:white;
+}
+
+.footer__column_content_social{
+}
+
+.footer__column-links_padding-bottom{
+  padding-bottom: 16px;
+}
+
+.footer__column-links_facebook{
+  width: 16px;
+  height: 16px;
+}
+
+.footer__column-links_vk{
+  width: 16px;
+  height: 16px;
+}
+
+.footer__column-links_facebook{
+  width: 16px;
+  height: 16px;
 }
