--- a/styles/style.css
+++ b/styles/style.css
@@ -115,11 +115,6 @@
   margin-bottom: 30px;
 }
 
-/* .two-columns__paragraph_margin{
-  margin-top: 30px;
-  margin-bottom: 30px;
-} */
-
 .two-columns__span-accent{
   line-height: 34px;
   font-size: 24px;
@@ -181,7 +176,8 @@
   height: 790px;
   padding-top:100px;
   position: relative;
-  color: #f2f2f2;
+  background-color: #f2f2f2;
+  z-index: 0;
 }
 
 .feinman__title{
