--- a/blocks/content/kaufman/__triangle/kaufman__triangle.css
+++ b/blocks/content/kaufman/__triangle/kaufman__triangle.css
@@ -1,4 +1,5 @@
 .kaufman__triangle{
+  background-image: url(../../../../images/kaufman-triangle.svg);
   position:absolute;
   right: -210px;
   top:0px;
@@ -6,5 +7,4 @@
   height: 877px;
   z-index: -1;
   background-size: cover;
-  animation: rotation linear 20s infinite;
 }
