--- a/blocks/content/khan/__buy-link/khan__buy-link.css
+++ b/blocks/content/khan/__buy-link/khan__buy-link.css
@@ -4,4 +4,10 @@
   font-weight:normal;
   color:#2f80ed;
   text-decoration:none;
+  align-self: start;
+}
+
+.khan__buy-link:hover{
+  opacity: 0.7;
+  transition: opacity 2s ease-in-out;
 }
