--- a/blocks/content/two-columns/two-columns.css
+++ b/blocks/content/two-columns/two-columns.css
@@ -1,8 +1,8 @@
 .two-columns {
   width: 80%;
   margin: auto;
-  margin-top: 100px;
-  margin-bottom: 70px;
+  margin-top: 0;
+  margin-bottom: 0;
   display: flex;
   justify-content: space-between;
 }
