--- a/blocks/content/video/__iframe/video__iframe.css
+++ b/blocks/content/video/__iframe/video__iframe.css
@@ -1,3 +1,11 @@
 .video__iframe{
   margin: 50px 20px auto auto;
+  width:515px;
+  height:316px;
+  border:0px;
+}
+
+.video__iframe:nth-of-type(2){
+  margin-left:0;
+  margin-right: auto;
 }
