--- a/blocks/footer/__column-link/footer__column-link.css
+++ b/blocks/footer/__column-link/footer__column-link.css
@@ -7,3 +7,8 @@
   padding-bottom: 16px;
   height: 10px;
 }
+
+.footer__column-link:hover{
+  opacity: 0.7;
+  transition: opacity 2s ease-in-out;
+}
