--- a/blocks/header/__link/header__link.css
+++ b/blocks/header/__link/header__link.css
@@ -1,6 +1,8 @@
 .header__link{
-  font-weight: normal;
-  color:#2f80ed;
-  z-index: 2;
-  text-decoration: none;
+  text-decoration:none;
+}
+
+.header__link:hover{
+  opacity: 0.7;
+  transition: opacity 2s ease-in-out;
 }
