--- a/blocks/kaufman/__triangle/kaufman__triangle.css
+++ b/blocks/kaufman/__triangle/kaufman__triangle.css
@@ -1,5 +1,5 @@
 .kaufman__triangle{
-  background-image: url(../../../../images/kaufman-triangle.svg);
+  background-image: url(../../../images/kaufman-triangle.svg);
   position:absolute;
   right: -210px;
   top:0px;
